# launcher_pi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSING  Plugin.cmake  README.md  UPDATE_PLUGIN_API.md  appveyor.yml  build-conf.rc  launcher.fbp
.circleci/: config.yml
.github/workflows/: clang-format-check.yml  macos.yml  windows.yml
build-deps/: macos-deps
buildwin/: win_deps.bat
ci/: circleci-build-android.sh  circleci-build-buster-armhf.sh  circleci-build-buster.sh  circleci-build-debian-armhf.sh  circleci-build-debian-docker.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos.sh  circleci-build-ubuntu-armhf.sh
cmake/: PatchFile.cmake  PluginConfigure.cmake  PluginPackage.cmake  TemplateVersion
debian/: changelog  control  copyright
debian/.debhelper/opencpn-plugin-launcher/: dbgsym-build-ids
flatpak/: org.opencpn.OpenCPN.Plugin.launcher.yaml
include/: LauncherSettingsDialog.h  LauncherUIDialog.h  launcher_pi.h
libs/std_filesystem/include/: std_filesystem.h
manual/: antora.yml  site.yml
manual/launcher/: site.yml
po/: POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fil.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  launcher_pi.pot  mr.po  nb.po  nl.po  pl.po  pt.po  ro.po  ru.po  sv.po  th.po  tr.po  vi.po  zh.po
src/: LauncherSettingsDialog.cpp  LauncherSettingsDialog.h  LauncherUIDialog.cpp  LauncherUIDialog.h  icons.cpp  icons.h  icons.sh  launcher_pi.cpp  launcher_pi.h  ocpn_plugin.h
(+5 files in other folders)
